z-index bugfixes

--- a/src/organisms/header/_header.scss
+++ b/src/organisms/header/_header.scss
@@ -2,7 +2,7 @@
 
 @include organism(header) {
 	position: relative;
-	z-index: z_index(foreground);
+	z-index: z_index(middleground);
 	border-bottom: 1px solid $color-ash;
 	background-color: $color-snow;
 
